SpringApps/app2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app2
  template:
    metadata:
      labels:
        app: spring-boot-app2
    spec:
      containers:
      - name: app2
        image: ghcr.io/alucardtheone/argocddemo:latest
        ports:
        - containerPort: 8081
