SpringApps/app2/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app2
spec:
  selector:
    app: spring-boot-app2
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8081
  type: NodePort
