SpringApps/app2/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
    namespace: istio-system
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.127.0.0.1.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-virtualservice2
  namespace: default
spec:
  gateways: 
    - spring-boot-gateway
  hosts:
  - "app2.127.0.0.1.nip.io"
  http:
  - route:
    - destination:
        host: spring-boot-app2
        port:
          number: 80
